# grc-guardian

./: .env.example  .gitignore  ENTERPRISE_VALIDATION_SUMMARY.md  Makefile  README.md  SUCCESS_SUMMARY.txt  TESTING_COMPLETE.md  comprehensive_test.py  enterprise_validation.py  final_demo.py  pyproject.toml  quick_test.py  start_api.bat  start_new_api.bat  test_api_endpoint.py  test_fix.py  test_guardrails.py  test_out_of_scope.py
agent/: __init__.py  bedrock_client.py  fallback.py  orchestrator.py  repair.py  rule_validator.py  schema.py  tool_registry.py  validator.py
agent/tests/: __init__.py  test_agent.py  test_bedrock_guardrails.py  test_bedrock_integration.py
api/: __init__.py  simple_api.py
api/app/: __init__.py  auth.py  config.py  dependencies.py  input_filter.py  logging_config.py  main.py  output_filter.py  rate_limit.py  routes.py  schemas.py  security_logger.py  storage.py
api/app/data/: security_regressions.jsonl
api/app/data/runs/RUN-20260217-171526-ffcfc57d/: findings.json  manifest.json  manifest.sig  plan.json  report.json
api/app/data/runs/RUN-20260217-173538-04a21bc5/: findings.json  manifest.json  manifest.sig  plan.json  report.json
api/app/data/runs/RUN-20260217-173816-e53ce981/: findings.json  manifest.json  manifest.sig  plan.json  report.json
api/app/data/runs/RUN-20260217-174003-f673be38/: findings.json  manifest.json  manifest.sig  plan.json  report.json
api/app/data/runs/RUN-20260217-174229-ba0b24e4/: findings.json  manifest.json  manifest.sig  plan.json  report.json
api/app/data/runs/RUN-20260217-175014-446d98e4/: findings.json  manifest.json  manifest.sig  report.json
api/app/data/runs/RUN-20260217-175926-4bf90459/: findings.csv  findings.json  manifest.json  manifest.sig  plan.json  report.json
api/app/data/runs/RUN-20260217-180755-8aa9d55e/: findings.json  manifest.json  manifest.sig  plan.json  report.json
api/app/data/runs/RUN-20260217-180835-879c6ccf/: findings.json  manifest.json  manifest.sig  plan.json  report.json
api/app/data/runs/RUN-20260217-180941-5fc7fce0/: findings.json  manifest.json  manifest.sig  plan.json  report.json
api/app/data/runs/RUN-20260217-181149-cb51c07a/: findings.json  manifest.json  manifest.sig  (+2 more)
api/tests/: __init__.py  test_api.py
docs/: ARCHITECTURE.md  DEMO_SCRIPT.md  QUICK_START_GUIDE.md  SECURITY_COVERAGE.md  TECHNICAL_DEEP_DIVE.md  THREAT_MODEL.md
evidence/: __init__.py  csv_writer.py  manifest.py  signer.py  writer.py
evidence/tests/: __init__.py  test_csv_writer.py  test_evidence.py
infra/terraform/: README.md  cloudtrail.tf  config.tf  iam.tf  main.tf  outputs.tf  s3.tf  variables.tf
rag/: __init__.py  retrieve.py
rag/data/: __init__.py
rag/data/controls/: ISO27001-A.5.15.md  NIST-800-53-AC-2.md  NIST-800-53-AC-6.md  NIST-800-53-AU-2.md  SOC2-CC6.1.md  SOC2-CC7.2.md  __init__.py
rag/tests/: __init__.py  test_rag.py
scripts/: bedrock_guardrails_setup.md
tools/: __init__.py  aws_config.py  tool_contracts.py
tools/tests/: __init__.py  test_aws_config.py
(+219 files in other folders)
