[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "grc-guardian"
version = "0.1.0"
description = "Autonomous GRC Compliance Guardian with deterministic engine and agentic orchestration"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "GRC Guardian Team"}
]
keywords = ["compliance", "grc", "aws", "security", "audit"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    # API Framework
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",

    # AWS Integration
    "boto3>=1.34.0",
    "botocore>=1.34.0",

    # Bedrock Agent Runtime
    "anthropic>=0.18.0",

    # RAG and Vector Store
    "chromadb>=0.4.22",
    "sentence-transformers>=2.3.0",
    "langchain>=0.1.0",
    "langchain-community>=0.0.13",

    # Evidence and Cryptography
    "cryptography>=42.0.0",
    "python-jose>=3.3.0",

    # Data Processing
    "pandas>=2.2.0",
    "pyyaml>=6.0.1",

    # HTTP Client
    "httpx>=0.26.0",

    # CLI and Utils
    "click>=8.1.7",
    "rich>=13.7.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    # Testing
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.12.0",
    "httpx>=0.26.0",

    # Linting and Formatting
    "ruff>=0.2.0",
    "black>=24.1.0",
    "mypy>=1.8.0",
    "isort>=5.13.0",

    # Type Stubs
    "boto3-stubs[config,s3,iam]>=1.34.0",
    "types-pyyaml>=6.0.12",
]

terraform = [
    "python-terraform>=0.10.1",
]

reports = [
    "jinja2>=3.1.3",
    "weasyprint>=60.2",
    "markdown>=3.5.2",
]

[project.scripts]
grc-guardian = "api.app.main:cli"

[tool.setuptools.packages.find]
where = ["."]
include = ["api*", "agent*", "tools*", "rag*", "evidence*", "reports*"]

[tool.pytest.ini_options]
testpaths = ["api/tests", "agent/tests", "tools/tests"]
python_files = "test_*.py"
python_functions = "test_*"
asyncio_mode = "auto"
addopts = "--cov=. --cov-report=html --cov-report=term-missing"

[tool.black]
line-length = 100
target-version = ['py311']
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 100

[tool.ruff]
line-length = 100
target-version = "py311"
select = ["E", "F", "I", "N", "W", "UP", "B", "A", "C4", "DTZ", "T10", "DJ", "EM", "ISC", "ICN", "G", "PIE", "PYI", "Q", "RSE", "RET", "SLF", "SIM", "TID", "TCH", "ARG", "PTH", "PD", "PGH", "PL", "TRY", "NPY", "RUF"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false
